# kart_brain

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  run_live.sh  run_live_3d.sh  stuff.md
.agents/: README.md  architecture.md  error_log.md  orin_environment.md  orin_flash_guide.md  scratchpad.md  simulation.md  vm_environment.md
scripts/: install_deps.sh  run_yolo_on_media.py
scripts/sim2d/: controllers.py  ga.py  generate_sdf.py  kart_model.py  perception.py  sim.py  track.py  train.py  visualize.py
src/joy_to_cmd_vel/src/: joy_to_cmd_vel_main.cpp
src/kart_bringup/: CMakeLists.txt
src/kart_bringup/launch/: teleop_launch.py
src/kart_bringup/scripts/: actuation_bridge_node.py
src/kart_perception/: package.xml  setup.py
src/kart_perception/kart_perception/: cone_depth_localizer_node.py  cone_marker_viz_node.py  image_source_node.py  steering_hud_node.py  yolo_detector_node.py
src/kart_perception/launch/: perception_3d.launch.py  perception_test.launch.py
src/kart_sim/: CMakeLists.txt
src/kart_sim/config/: neural_v2_weights.json
src/kart_sim/launch/: simulation.launch.py
src/kart_sim/models/cone_blue/: model.sdf
src/kart_sim/models/cone_orange/: model.sdf
src/kart_sim/models/cone_orange_big/: model.sdf
src/kart_sim/models/cone_yellow/: model.sdf
src/kart_sim/models/kart/: model.sdf
src/kart_sim/scripts/: ackermann_to_vel.py  cone_follower_node.py  evaluate_perception.py  perfect_perception_node.py
src/kart_sim/worlds/: fs_track.sdf
src/kb_interfaces/msg/: Frame.msg
(+5 files in other folders)
